test_scores/negative_dimers/features/Q99959.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q99959.pkl.xz